{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "83047dd0-0972-470c-b8e7-3d5dde0350c4",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "17060e9d-8125-4eaa-9348-ec2577ca551f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "19c53577-e017-4565-81cf-3119e1262642",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "419102d9-16f6-4651-a95b-528e9361934e",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fe274369-8ba8-45e7-acb1-9c2be4848318",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47fa7d77-5ff1-4fd9-bb77-2df0f4544e34",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b912ecb9-8145-4a9d-9149-5a59719b2a69",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}